<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2015 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License"
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/touchscreen_control_gesture_head">

        <SwitchPreference
            android:key="touchscreen_gesture_control"
            android:title="@string/touchscreen_control_gesture_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:dependency="touchscreen_gesture_control"
        android:key="category_gestures"
        android:title="@string/gesture_category_title">

        <com.cyanogenmod.settings.device.SwitchPlusPreference
            android:defaultValue="wakeUp"
            android:key="160_enabled"
            android:summaryOff=" "
            android:title="@string/touchscreen_dtp_gesture_title" />

        <com.cyanogenmod.settings.device.SwitchPlusPreference
            android:defaultValue="prev"
            android:key="176_enabled"
            android:summaryOff=" "
            android:title="@string/touchscreen_x_left_gesture_title" />

        <com.cyanogenmod.settings.device.SwitchPlusPreference
            android:defaultValue="next"
            android:key="177_enabled"
            android:summaryOff=" "
            android:title="@string/touchscreen_x_right_gesture_title" />

        <com.cyanogenmod.settings.device.SwitchPlusPreference
            android:defaultValue="unlock"
            android:key="178_enabled"
            android:summaryOff=" "
            android:title="@string/touchscreen_y_up_gesture_title" />

        <com.cyanogenmod.settings.device.SwitchPlusPreference
            android:defaultValue="flashlight"
            android:key="179_enabled"
            android:summaryOff=" "
            android:title="@string/touchscreen_y_down_gesture_title" />

        <com.cyanogenmod.settings.device.SwitchPlusPreference
            android:defaultValue="camera"
            android:key="193_enabled"
            android:summaryOff=" "
            android:title="@string/touchscreen_c_gesture_title" />

        <com.cyanogenmod.settings.device.SwitchPlusPreference
            android:defaultValue="wakeUp"
            android:key="192_enabled"
            android:summaryOff=" "
            android:title="@string/touchscreen_e_gesture_title" />

        <com.cyanogenmod.settings.device.SwitchPlusPreference
            android:defaultValue="normalMode"
            android:key="194_enabled"
            android:summaryOff=" "
            android:title="@string/touchscreen_w_gesture_title" />

        <com.cyanogenmod.settings.device.SwitchPlusPreference
            android:defaultValue="muteMode"
            android:key="195_enabled"
            android:summaryOff=" "
            android:title="@string/touchscreen_m_gesture_title" />

        <com.cyanogenmod.settings.device.SwitchPlusPreference
            android:defaultValue="wakeUp"
            android:key="196_enabled"
            android:summaryOff=" "
            android:title="@string/touchscreen_o_gesture_title" />

        <com.cyanogenmod.settings.device.SwitchPlusPreference
            android:defaultValue="muteMode"
            android:key="197_enabled"
            android:summaryOff=" "
            android:title="@string/touchscreen_s_gesture_title" />

        <com.cyanogenmod.settings.device.SwitchPlusPreference
            android:defaultValue="wakeUp"
            android:key="198_enabled"
            android:summaryOff=" "
            android:title="@string/touchscreen_v_gesture_title" />

        <com.cyanogenmod.settings.device.SwitchPlusPreference
            android:defaultValue="doNotDisturbMode"
            android:key="202_enabled"
            android:summaryOff=" "
            android:title="@string/touchscreen_z_gesture_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/touchscreen_extras">

        <SwitchPreference
            android:key="touchscreen_gesture_haptic_feedback"
            android:summary="@string/haptic_feedback_summary"
            android:title="@string/haptic_feedback" />

    </PreferenceCategory>

</PreferenceScreen>

